--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
             <div class="row justify-content-between">
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/');"></div>
+                      <!--  <div class="icon" style="background-image: url('img/sec_success_stories/');"></div> -->
                         <h3>Александр Батин</h3>
                         <p>Маркетолог</p>
                         <i>“Я прошел курс Юлии Ионовой. Это стало искрой и зажиганием для моего локомотива жизни. Я научился мечтать, хотеть и двигаться к исполнению мечты. У меня появились новые деловые связи. Появилась ясность цели, ясность пути к
@@ -714,7 +714,7 @@
                 </div>
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/');"></div>
+                    <!--    <div class="icon" style="background-image: url('img/sec_success_stories/');"></div> -->
                         <h3>Анна Савченко</h3>
                         <p>Риелтор</p>
                         <i>“До того, как я пришла на курс, моя жизнь была забита массой дел. Дом, работа, муж. Я кое как выкроила время на уроки и домашние задания. И мои мечты стали приобретать очертания и незаметно для меня, исполняться. Я сменила
@@ -724,7 +724,7 @@
                 </div>
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/');"></div>
+                  <!--      <div class="icon" style="background-image: url('img/sec_success_stories/');"></div> -->
                         <h3>Валентина Василевич</h3>
                         <p>Предприниматель</p>
                         <i>“До проекта меня мучили переживания, стеснения, неуверенность, сомнения. Я боялась своего голоса, боялась смотреть свои видео. В процессе выполнения домашних заданий, я убедилась в нужности своих действий, в собственной
