--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
                     <h1>Lomanov Kir (Lomanoff)</h1>
                     <p class="undertitle">
                         Психолог-практик и исследователь. Трансформационный Коуч.<br><br>
-                        Международный коуч ICU.<br>
-                        Психолог и психотерапевт Интегрального Нейропрограммирования<br><br>
-                        Предприниматель, соучредитель 2-х бизнес-проектов в сфере строительства и недвижимости<br><br>
                         Коуч финансового IQ<br>
                         Инвестиционный консультант<br>
                         Инвестор-практик.<br>
@@ -129,13 +126,6 @@
                         <p>4) Я эксперт в системном развитии личности и личной эффективности. Помогаю выделить 1% главного и отбросить 99% лишнего.</p>
                         <p>5) Я помогаю скромным и неуверенным в себе людям проявляться ярко и максимально раскрыть свой потенциал. Убираю тем самым страхи, чувство вины и ограничивающие убеждения</p>
                         <p>6)Помогаю создать индивидуальный гармоничный баланс "работа - отдых"</p>
-                        <p>МОЯ МИССИЯ - показать путь к себе НАСТОЯЩЕМУ, найти свое истинное призвание и позволить себе это!</p>
-                        <p>Принять себя и открыто выражать свои чувства, открыть в себе смелость быть собой, обрести уверенность в себе! Позволить себе быть ярким и светить для себя и окружающих! Светиться любовь, легкостью и радостью. Убрав
-                            навязанные блоки и ограничения.</p>
-                        <p>Убрать убеждения о том, что "ты сам, мир или другие не в порядке" - внедрить в вас понимание, что вы и только вы автор своей жизни и способны все изменить!</p>
-                        <p>Помогаю Снять маски, убрать стереотипы и страхи. Освободиться от чувства долга и вины, которые постоянно заставляют себя наказывать и саботировать.</p>
-                        <p>И показать, что именно ты УЖЕ достаточно ХОРОШ, красив, силен, умен, достоин и именно ТЕБЯ полюбят и принимут таким, каким ты рожден(а) быть! "Прожить жизнь так, чтобы заодно успеть наделать другим хороших дел. И
-                            действовать, пока я буду здесь!"</p>
                     </div>
                 </div>
             </div>
@@ -204,16 +194,17 @@
                             <ul class="list">
                                 <li>1 шаг - 5ти дневный марафон со свободной оплатой</li>
                                 <li>Далее 3 этапа по 3 дней онлайн тренинг</li>
+                                <li>1) Марафон 5 дней<br>
+                                    2) 1 этап 30 дней<br>
+                                    3) 2 этап 30 дней<br>
+                                    4) 3 этап 30 дней<br>
+                                    +Коуч группа<br>
+                                    +Личный Коучинг</li>
                             </ul>
                         </div>
                         <div class="dropdown-divider"></div>
                         <div class="b-card-footer">
-                            <div class="counter">1) Марафон 5 дней<br>
-                                2) 1 этап 30 дней<br>
-                                3) 2 этап 30 дней<br>
-                                4) 3 этап 30 дней<br>
-                                +Коуч группа<br>
-                                +Личный Коучинг</div>
+                            <div class="counter"></div>
                             <div class="views">
                                 <img class="mr-1" src="img/icons/human.svg">
                                 57
