--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_your_mentor/konstantin.png" alt="SE">
+                        <img src="img/sec_your_mentor/yuliya.png" alt="SE">
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/" alt="SE">
+                        <img src="img/sec_1/yuliya.png" alt="SE">
                     </div>
                 </div>
             </div>
