--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>Хотите я стану вашим наставником и помогу вам создать доверительные отношения с вашим воспитанным и счастливым подростком? </h2>
                     <p>Я дам вам алгоритм взаимодействия с подростком при помощи которого вы воспитаете  уверенного в себе и счастливого человека.</p>
-                    <a href="https://www.facebook.com/vospitanies/" class="btn btn-blue">
+                    <a href="https://rafshus-9896.gr8.com/" class="btn btn-blue">
                         ДА, ХОЧУ
                     </a>
                 </div>
@@ -499,7 +499,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.youtube.com/embed/kgkngWojnOM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-                    <a href="https://www.facebook.com/vospitanies/" class="btn btn-success">Да хочу!</a>
+                    <a href="https://rafshus-9896.gr8.com/" class="btn btn-success">Да хочу!</a>
                 </div>
             </div>
         </div>
