--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/konstantin.png" alt="SE">
+                        <img src="img/sec_1/natasha.png" alt="SE">
                     </div>
                 </div>
             </div>
