--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
                             <div class="item">
                                 <span>Старт</span>
                                 <div class="date">
-                                    <span>ноября</span>
+                                    <span>февраля</span>
                                     <div>25</div>
                                 </div>
                             </div>
                             <div class="item">
                                 <span>Финиш</span>
                                 <div class="date">
-                                    <span>ноября</span>
+                                    <span>февраля</span>
                                     <div>29</div>
                                 </div>
                             </div>
