--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-lg-8 d-flex justify-content-end">
                     <div class="card">
-                        <h4>Наташа Флорес</h4>
+                        <h4>Наталья Флорес</h4>
                         <p>В ходе обучения Вы научитесь: <ul>
                                 <li>Определять миссию и призвание </li>
                                 <li>Научитесь ставить достижимые цели, разрабатывать чёткий план ежедневных шагов для их достижения, планировать своё ежедневное время </li>
@@ -452,7 +452,7 @@
             </div>
             <ul class="nav nav-pills" id="pills-tab" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link active" id="pills-home-tab" tabindex data-toggle="pill" data-target="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Тренеры, коучи, психологи, целеустремленные люди</a>
+                    <a class="nav-link active" id="pills-home-tab" tabindex data-toggle="pill" data-target="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Тренеры, коучи, психологи,<br> целеустремленные люди</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="pills-profile-tab" tabindex data-toggle="pill" data-target="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false"> Целеустремленные люди</a>
