--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             В результате обучения вы станете профессионалами целеполагания и управления временем. Каждый урок вас продвинет ближе к вашей цели и поможет увидеть каким образом вы можете ее достичь.
                         </p>
                         <div class="card__footer">
-                            <span class="price">Полная стоимость курса 149€,<br> по рождественской скидке 59€</span>
+                            <span class="price">Полная стоимость курса <b>149€</b>,<br> по рождественской скидке <b>59€</b></span>
                             <a href="" class="btn btn-success">Принять участие</a>
                         </div>
                     </div>
@@ -617,7 +617,7 @@
                             </ul>
                             <div class="right">
                                 <div class="label">Стоимость:</div>
-                                <div class="price">149€ Полная стоимость; 59€ рождественская цена (действительна до 10 января 2020 года)</div>
+                                <div class="price"><b>149€</b> Полная стоимость; <b>59€</b> рождественская цена (действительна до 10 января 2020 года)</div>
                                 <a href="" class="btn btn-success">Принять участие</a>
                             </div>
                         </div>
