--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="row">
                 <div class="col-12">
-                    <h1>25 техник для постановки цели и управления временем для тренеров и коучей</h1>
+                    <h1>Курс «25 техник тайм менеджменту и целеполаганию» для тренеров и коучей</h1>
                 </div>
                 <div class="col-md-8">
                     <div class="undertitle_wrapp">
@@ -70,13 +70,21 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="undertitle">Этот курс для тех, кто хочет научиться определять и достигать свои цели. Вы научитесь создавать цель из мечты, делать пошаговый план по ее достижению. «Оседлаете» время, и заставите его работать на вас и
-                            ваши задачи.</p>
+                        <p class="undertitle">Благодаря курсу «25 техник по тайм менеджменту и целеполаганию для тренеров и коучей» вы приобретёте основные навыки стратегического целеполагания и управления временем, и совершите квантовый скачок в
+                            профессиональной сфере и личной жизни. <br><br>
+                            Во время обучения вы определите своё призвание и цели, научитесь расставлять приоритеты и планировать ваше время эффективно.</p>
                     </div>
                     <div class="card">
-                        <p>Этот курс разработан для тренеров, коучей и развивающихся людей. На курсе доступным языком, с юмором, объясняются лучшие методы по управлению временем, применение которых сделает вас очень продуктивным и успешным человеком.
-                            Во время курса вы сможете лучше понять себя, свои сильные стороны, а также выйти на новый уровень в вашей личной, профессиональной и финансовой сферах.
-                            В результате обучения вы станете профессионалами целеполагания и управления временем. Каждый урок вас продвинет ближе к вашей цели и поможет увидеть каким образом вы можете ее достичь.
+                        <p>Данный курс создан, чтобы помочь активным, желающим достичь успеха людям, понять своё призвание и научиться стратегическому планированию жизни и бизнеса.</p>
+                        <p>В ходе обучения вы научитесь: <ul>
+                                <li>Понимать вашу миссию и призвание.</li>
+                                <li>Ставить глобальные цели.</li>
+                                <li>Использовать время эффективно.</li>
+                                <li>Находить баланс между работой и остальными сферами жизни.</li>
+                                <li>Достигать цели, о которых вы даже не осмеливались мечтать.</li>
+                                <li>Иметь больше времени для вашего личного развития.</li>
+                                <li>Разрабатывать пошаговый план действий для улучшения вашей личной продуктивности.</li>
+                            </ul>
                         </p>
                         <div class="card__footer">
                             <span class="price">Полная стоимость курса <b>149€</b>,<br> по рождественской скидке <b>59€</b></span>
@@ -102,7 +110,7 @@
             <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
-                <h2>Вы поймете свои желания и определите цели на следующий год</h2>
+                <h2>Вы достигните в 10 раз больше результатов при меньших затратах времени и усилий</h2>
             </div>
             <div class="row">
                 <div class="col-lg-4">
@@ -173,8 +181,8 @@
                 </div>
                 <div class="col-md-auto">
                     <div class="card card_txt">
-                        <h4>Просто и весело о сложном</h4>
-                        <p>Этот курс разработан для тренеров, коучей и развивающихся людей, заинтересованных в повышении личной эффективности. В ходе обучения доступным языком объясняются лучшие методы по управлению временем, применение которых
+                        <h4>Просто о сложном</h4>
+                        <p>Этот курс разработан для тренеров, коучей и людей, заинтересованных в повышении личной эффективности. В ходе обучения доступным языком объясняются лучшие инструменты тайм менеджмента, применение которых
                             сделает учеников очень продуктивными и успешными людьми. Знания, полученные на курсе, помогут лучше понять себя, выявить свои сильные стороны, выйти на новый уровень в личной, профессиональной и финансовой сферах.
                             В результате обучения ученики станут профессионалами планирования и управления временем. А также,
                             <ul>
@@ -259,7 +267,7 @@
             <div class="sec_title">
                 <img src="img/sec_my_contacts/title_label.svg" alt="title_label">
                 <h2>Программа курса</h2>
-                <p>Этот курс является лучшей «выжимкой» знаний и богатого личного опыта получения результатов. Он дает практические знания по всем новейшим техникам стратегического планирования для качественного и стремительного достижения успеха.
+                <p>Этот курс дает практические знания по всем новейшим техникам стратегического планирования для качественного и стремительного достижения успеха.
                 </p>
             </div>
             <div class="d-flex flex-wrap justify-content-center">
@@ -441,7 +449,7 @@
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="img/sec_your_result/title_label.svg" alt="title_label">
-                <h2>Кому подойдет “25 техник для постановки цели и управления временем для тренеров и коучей”</h2>
+                <h2>Кому подойдет “25 техник тайм менеджмента и целеполагания для тренеров и коучей”</h2>
                 <p>Вы профессионал, который хочет увеличить свой профессионализм и перейти на новый уровень доходов?
                     Вам нужны работающие методы для достижения успехов?
                     Вы записались на множество курсов, но каждый раз откладываете обучение в долгий ящик?
@@ -657,6 +665,18 @@
                         <h3>Анжелика Сомик</h3>
                         <p>Руководитель проектов (РМР)</p>
                         <i>“Действительно, очень полезный контент. Взяла для себя на заметку матрицу и метод больших камней. Спасибо! ”</i>
+                    </div>
+                </div>
+                <div class="col-md-4 card_wrapp">
+                    <div class="card_profile">
+                        <div class="icon" style="background-image: url('img/sec_success_stories/irina.jpg');"></div>
+                        <h3>Ирина Бородкина</h3>
+                        <p>Коуч, организатор праздничных мероприятий</p>
+                        <i>“Я провела несколько чудесных вечеров на марафоне Цели на 2020 год вместе с Наташей Флорес! На этом марафоне было очень много полезной информации для меня. Сама форма подачи материала Наташей была очень корректная,
+                            деликатная, с обилием примеров, которые, конечно же, помогают восприятию.
+                            У Наташи очень приятный голос, темп её речи помогает успевать воспринимать всё, чем она делится со слушателями (я знаю о чём говорю - я тренер по речи).
+                            Всем рекомендую в будущем присоединяться к этому замечательному марафону! А Наташе желаю успехов в её благородном деле, чтобы как можно больше людей, которым она поможет, стали счастливее.
+                            ”</i>
                     </div>
                 </div>
             </div>
