button and price fixes

--- a/index.html
+++ b/index.html
@@ -31,13 +31,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#reviews">Отзывы</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
-                </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Войти</a>
-            </form>
         </div>
     </nav>
     <!-- / fixed header -->
@@ -87,7 +81,7 @@
                             </ul>
                         </p>
                         <div class="card__footer">
-                            <span class="price">Полная стоимость курса <b>149€</b>,<br> по рождественской скидке <b>59€</b></span>
+                            <span class="price">149€ - Полная стоимость курса, <br><b>59€ - По рождественской скидке</b></span>
                             <a href="" class="btn btn-success">Принять участие</a>
                         </div>
                     </div>
@@ -276,7 +270,7 @@
                         <div class="card-header" id="headingOne">
                             <h2>
                                 <i>Практикум I</i>
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" aria-controls="collapse_1">
+                                <button class="btn" type="button" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" aria-controls="collapse_1">
                                     <span>Введение</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
                             </h2>
@@ -292,7 +286,7 @@
                         <div class="card-header" id="headingOne">
                             <h2>
                                 <i>Практикум II</i>
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_2" aria-expanded="true" aria-controls="collapse_2">
+                                <button class="btn" type="button" data-toggle="collapse" data-target="#collapse_2" aria-expanded="true" aria-controls="collapse_2">
                                     <span>Целеполагание</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
                             </h2>
@@ -311,7 +305,7 @@
                         <div class="card-header" id="headingOne">
                             <h2>
                                 <i>Практикум III</i>
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_3" aria-expanded="true" aria-controls="collapse_3">
+                                <button class="btn" type="button" data-toggle="collapse" data-target="#collapse_3" aria-expanded="true" aria-controls="collapse_3">
                                     <span>Понятия время и продуктивность</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
                             </h2>
@@ -330,7 +324,7 @@
                         <div class="card-header" id="headingOne">
                             <h2>
                                 <i>Практикум IV</i>
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_4" aria-expanded="true" aria-controls="collapse_4">
+                                <button class="btn" type="button" data-toggle="collapse" data-target="#collapse_4" aria-expanded="true" aria-controls="collapse_4">
                                     <span>Инструменты для управления Временем</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
                             </h2>
@@ -360,7 +354,7 @@
                         <div class="card-header" id="headingOne">
                             <h2>
                                 <i>Практикум V</i>
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_5" aria-expanded="true" aria-controls="collapse_5">
+                                <button class="btn" type="button" data-toggle="collapse" data-target="#collapse_5" aria-expanded="true" aria-controls="collapse_5">
                                     <span>Техники успешного планирования</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
                             </h2>
@@ -383,7 +377,7 @@
                         <div class="card-header" id="headingOne">
                             <h2>
                                 <i>Практикум VI</i>
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_6" aria-expanded="true" aria-controls="collapse_6">
+                                <button class="btn" type="button" data-toggle="collapse" data-target="#collapse_6" aria-expanded="true" aria-controls="collapse_6">
                                     <span>Обезоруживание воров времени.</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
                             </h2>
@@ -408,7 +402,7 @@
                         <div class="card-header" id="headingOne">
                             <h2>
                                 <i>Практикум VII</i>
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_7" aria-expanded="true" aria-controls="collapse_7">
+                                <button class="btn" type="button" data-toggle="collapse" data-target="#collapse_7" aria-expanded="true" aria-controls="collapse_7">
                                     <span>Практика </span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
                             </h2>
@@ -424,7 +418,7 @@
                         <div class="card-header" id="headingOne">
                             <h2>
                                 <i>Практикум VIII</i>
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_8" aria-expanded="true" aria-controls="collapse_8">
+                                <button class="btn" type="button" data-toggle="collapse" data-target="#collapse_8" aria-expanded="true" aria-controls="collapse_8">
                                     <span>Завершающий модуль</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
                             </h2>
@@ -625,7 +619,7 @@
                             </ul>
                             <div class="right">
                                 <div class="label">Стоимость:</div>
-                                <div class="price"><b>149€</b> Полная стоимость; <b>59€</b> рождественская цена (действительна до 10 января 2020 года)</div>
+                                <div class="price">149€ - Полная стоимость; <br><b>59€ - рождественская цена </b><span>(действительна до 10 января 2020 года)</span></div>
                                 <a href="" class="btn btn-success">Принять участие</a>
                             </div>
                         </div>
