--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </p>
                         <div class="card__footer">
                             <span class="price">149€ - Полная стоимость курса, <br><b>59€ - По рождественской скидке</b></span>
-                            <a href="" class="btn btn-success">Принять участие</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScONWULD0I0NWuTY_efOvTRXWs0h9nBAitoZ8q8krNDJe2nBg/viewform" class="btn btn-success">Принять участие</a>
                         </div>
                     </div>
                 </div>
@@ -620,7 +620,7 @@
                             <div class="right">
                                 <div class="label">Стоимость:</div>
                                 <div class="price">149€ - Полная стоимость; <br><b>59€ - рождественская цена </b><span>(действительна до 10 января 2020 года)</span></div>
-                                <a href="" class="btn btn-success">Принять участие</a>
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScONWULD0I0NWuTY_efOvTRXWs0h9nBAitoZ8q8krNDJe2nBg/viewform" class="btn btn-success">Принять участие</a>
                             </div>
                         </div>
                     </div>
@@ -686,7 +686,7 @@
                 <p>Стань участником курса «25 техник для постановки цели и управления временем для тренеров и коучей» и получи сверхспособности для достижения любых целей.</p>
             </div>
             <div class="row">
-                <div class="col-12"><a href="#" class="btn btn-success mx-auto">Записаться на Курс</a></div>
+                <div class="col-12"><a href="https://docs.google.com/forms/d/e/1FAIpQLScONWULD0I0NWuTY_efOvTRXWs0h9nBAitoZ8q8krNDJe2nBg/viewform" class="btn btn-success mx-auto">Записаться на Курс</a></div>
             </div>
         </div>
     </section>
