--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Войти</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScXCsAyMx0oz8750qR7GSaCjHd65xj5i4vpMNIHCLSIeIHK_g/viewform" class="btn btn-success-2 my-2 my-sm-0">Принять участие</a>
             </form>
         </div>
     </nav>
@@ -74,7 +74,7 @@
                             платформе Smartexpert - самому удобному решению для вас и ваших учеников</p>
                         <div class="card__footer">
                             <span class="price"><b>500$</b> только из заработанных на вашем курсе средств</span>
-                            <a href="" class="btn btn-success">Принять участие</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScXCsAyMx0oz8750qR7GSaCjHd65xj5i4vpMNIHCLSIeIHK_g/viewform" class="btn btn-success">Принять участие</a>
                         </div>
                     </div>
                 </div>
@@ -615,7 +615,7 @@
                             <div class="right">
                                 <div class="label">Стоимость:</div>
                                 <div class="price"><b>500$</b> только из заработанных<br> на вашем курсе денег</div>
-                                <a href="" class="btn btn-success">Принять участие</a>
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScXCsAyMx0oz8750qR7GSaCjHd65xj5i4vpMNIHCLSIeIHK_g/viewform" class="btn btn-success">Принять участие</a>
                             </div>
                         </div>
                     </div>
@@ -661,7 +661,7 @@
                 <p>Станьте участником онлайн-марафона “8 дней к заработку на знаниях” и получите работающих инструменты создания своих образовательных продуктов, которые покорят умы тысяч людей по всему миру</p>
             </div>
             <div class="row">
-                <div class="col-12"><a href="#" class="btn btn-success mx-auto">Записаться на Курс</a></div>
+                <div class="col-12"><a href="https://docs.google.com/forms/d/e/1FAIpQLScXCsAyMx0oz8750qR7GSaCjHd65xj5i4vpMNIHCLSIeIHK_g/viewform" class="btn btn-success mx-auto">Записаться на Курс</a></div>
             </div>
         </div>
     </section>
