--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="img_wrapp">
-                        <img src="img/sec_your_mentor/kirill.png" alt="SE">
-                    </div>
+                <div class="col-md-4 d-flex align-items-center">
+                  <div class="embed-responsive embed-responsive-16by9">
+                      <iframe src="https://www.youtube.com/embed/M883Yks4Jvw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
                 </div>
             </div>
         </div>
