--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1>8 шагов к заработку на знаниях</h1>
-                </div>
-                <div class="col-md-8">
+
                     <div class="undertitle_wrapp">
                         <div class="date_wrap">
                             <div class="item">
@@ -69,6 +68,8 @@
                         </div>
                         <p class="undertitle">Марафон для экспертов, которые хотят за 14 дней создать свой образовательный онлайн-продукт</p>
                     </div>
+                </div>
+                <div class="col-md-6">
                     <div class="card">
                         <p>Вы эксперт и хотите зарабатывать на своих знаниях онлайн? Тогда этот марафон для вас. Мы инвестируем в вас на уникальных условиях! Вы не только создадите методологию своего образовательного продукта, но и получите доступ к
                             платформе Smartexpert - самому удобному решению для вас и ваших учеников</p>
@@ -78,8 +79,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 d-flex align-items-center">
-                  <div class="embed-responsive embed-responsive-16by9">
+                <div class="col-md-6 d-flex align-items-start d-flex justify-content-end">
+                  <div class="embed-responsive embed-responsive-16by9 card" style="max-width: 500px; padding: 0;">
                       <iframe src="https://www.youtube.com/embed/M883Yks4Jvw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                 </div>
